IDE: fixed a typo in Russian translation
(cherry picked from commit fff1533db3ddba12c4cb384381741d1ca7177758)

--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -11230,7 +11230,7 @@ msgstr "Новый пакет"
 
 #: lazarusidestrconsts.liskmnewproject
 msgid "New project"
-msgstr "Нрвый проект "
+msgstr "Новый проект"
 
 #: lazarusidestrconsts.liskmnewprojectfromfile
 msgid "New project from file"
