--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-05-15 15:40+0300\n"
+"PO-Revision-Date: 2025-05-22 02:52+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -11521,7 +11521,7 @@ msgstr "Новый пакет"
 
 #: lazarusidestrconsts.liskmnewproject
 msgid "New project"
-msgstr "Нрвый проект "
+msgstr "Новый проект"
 
 #: lazarusidestrconsts.liskmnewprojectfromfile
 msgid "New project from file"
