--- a/tools/chmmaker/languages/chmmaker.ru.po
+++ b/tools/chmmaker/languages/chmmaker.ru.po
@@ -3,384 +3,377 @@ msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: \n"
+"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
-"Language: de\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.6\n"
+"X-Generator: Poedit 3.5\n"
 
 #: chmstrconsts.rsabout
 msgid "About..."
-msgstr "Über..."
+msgstr "О программе..."
 
 #: chmstrconsts.rsaboutcaption
 msgctxt "chmstrconsts.rsaboutcaption"
 msgid "About CHMMaker"
-msgstr "Über CHMMaker"
+msgstr "О CHMMaker"
 
 #: chmstrconsts.rsabout_hint
 msgctxt "chmstrconsts.rsabout_hint"
 msgid "Information about this application"
-msgstr "Information über diese Anwendung"
+msgstr "Сведения об этой программе"
 
 #: chmstrconsts.rsadditem
 msgid "Add item"
-msgstr "Eintrag hinzuf"
+msgstr "Добавить элемент"
 
 #: chmstrconsts.rsafter
 msgctxt "chmstrconsts.rsafter"
 msgid "After"
-msgstr "Nach"
+msgstr "После"
 
 #: chmstrconsts.rsand
 msgctxt "chmstrconsts.rsand"
 msgid " and "
-msgstr " und "
+msgstr " и "
 
 #: chmstrconsts.rsbackgroundcolor
 msgid "Background color"
-msgstr "Hintergrundfarbe"
+msgstr "Цвет фона"
 
 #: chmstrconsts.rsbefore
 msgctxt "chmstrconsts.rsbefore"
 msgid "Before"
-msgstr "Vor"
+msgstr "До"
 
 #: chmstrconsts.rsbuildinglhelp
 msgid "Building LHelp..."
-msgstr "Erzeuge LHelp..."
+msgstr "Сборка LHelp..."
 
 #: chmstrconsts.rscancel
 msgid "Cancel"
-msgstr "Abbrechen"
+msgstr "Отмена"
 
 #: chmstrconsts.rsclose
 msgctxt "chmstrconsts.rsclose"
 msgid "Close"
-msgstr "Schließen"
+msgstr "Закрыть"
 
 #: chmstrconsts.rsclose_hint
 msgctxt "chmstrconsts.rsclose_hint"
 msgid "Close project"
-msgstr "Projekt schließen"
+msgstr "Закрыть проект"
 
 #: chmstrconsts.rscompile
 msgctxt "chmstrconsts.rscompile"
 msgid "Compile"
-msgstr "Kompilieren"
+msgstr "Компилировать"
 
 #: chmstrconsts.rscompileandview
 msgctxt "chmstrconsts.rscompileandview"
 msgid "Compile and view"
-msgstr "Kompilieren und anzeigen"
+msgstr "Компилировать и просмотреть"
 
 #: chmstrconsts.rscompileandview_hint
 msgctxt "chmstrconsts.rscompileandview_hint"
 msgid "Compile project and view generated CHM file"
-msgstr "Projekt kompilieren und erzeugte CHM-Datei anzeigen"
+msgstr "Компилировать проект и просмотреть созданный файл CHM"
 
 #: chmstrconsts.rscompile_hint
 msgctxt "chmstrconsts.rscompile_hint"
 msgid "Compile project"
-msgstr "Projekt kompilieren"
+msgstr "Компилировать проект"
 
 #: chmstrconsts.rscreatedwith
 msgid "Created with "
-msgstr "Erzeugt mit "
+msgstr "Создано с помощью "
 
 #: chmstrconsts.rscreatesearchablehtml_hint
 msgid "Only files added to the project manually are indexed, files added automatically are not indexed."
-msgstr "Nur Dateien, die manuell zum Projekt hinzugefügt worden sind, werden indiziert, nicht aber automatisch hinzugefügte."
+msgstr "Индексируются только файлы, добавленные в проект вручную. Файлы, добавленные автоматически, не индексируются."
 
 #: chmstrconsts.rsdelete
 msgctxt "chmstrconsts.rsdelete"
 msgid "Delete"
-msgstr "Löschen"
+msgstr "Удалить"
 
 #: chmstrconsts.rsdescription
 msgctxt "chmstrconsts.rsdescription"
 msgid "Description"
-msgstr "Beschreibung"
+msgstr "Описание"
 
 #: chmstrconsts.rsdoyouwanttocontinue
 msgctxt "chmstrconsts.rsdoyouwanttocontinue"
 msgid "Do you want to continue?"
-msgstr "Weiter?"
+msgstr "Хотите продолжить?"
 
 #: chmstrconsts.rsedit
 msgctxt "chmstrconsts.rsedit"
 msgid "Edit..."
-msgstr "Bearbeiten..."
+msgstr "Редактировать..."
 
 #: chmstrconsts.rsfilealreadyexists_overwrite
 #, object-pascal-format
 msgctxt "chmstrconsts.rsfilealreadyexists_overwrite"
 msgid "File \"%s\" already exists. Overwrite?"
-msgstr "Datei \"%s\" existiert bereits. Überschreiben?"
+msgstr "Файл \"%s\" уже существует. Перезаписать?"
 
 #: chmstrconsts.rsfilecreated
 #, object-pascal-format
 msgctxt "chmstrconsts.rsfilecreated"
 msgid "CHM file \"%s\" was created successfully."
-msgstr "CHM-Datei \"%s\" wurde erfolgreich erzeugt."
+msgstr "Файл CHM \"%s\" успешно создан."
 
 #: chmstrconsts.rsfilenameneeded
 msgctxt "chmstrconsts.rsfilenameneeded"
 msgid "You must set a filename for the output CHM file."
-msgstr "Name für die CHM-Datei benötigt."
+msgstr "Требуется присвоить имя выходному файлу CHM."
 
 #: chmstrconsts.rsfilenotfound
 #, object-pascal-format
 msgid "File \"%s\" not found."
-msgstr "Datei \"%s\" nicht gefunden."
+msgstr "Файл \"%s\" не найден."
 
 #: chmstrconsts.rsfiles
 msgctxt "chmstrconsts.rsfiles"
 msgid "Files"
-msgstr "Dateien"
+msgstr "Файлы"
 
 #: chmstrconsts.rsfont
 msgctxt "chmstrconsts.rsfont"
 msgid "Font"
-msgstr "Schriftart"
+msgstr "Шрифт"
 
 #: chmstrconsts.rsforegroundcolor
 msgid "Foreground color"
-msgstr "Vordergrundfarbe"
+msgstr "Цвет текста"
 
 #: chmstrconsts.rsfromtitle
 msgid "From title"
-msgstr "Aus Titel"
+msgstr "Из заголовка"
 
 #: chmstrconsts.rsglobalproperties
 msgid "Global properties"
-msgstr "Globale Eigenschaften"
+msgstr "Глобальные свойства"
 
 #: chmstrconsts.rslazbuildcouldnotbefound
-#, fuzzy
-#| msgid "LazBuild could not be found."
 msgctxt "chmstrconsts.rslazbuildcouldnotbefound"
 msgid "Lazbuild could not be found."
-msgstr "LazBuild wurde nicht gefunden."
+msgstr "Не удалось найти Lazbuild."
 
 #: chmstrconsts.rslhelpcouldnotbelocatedat
 #, object-pascal-format
 msgctxt "chmstrconsts.rslhelpcouldnotbelocatedat"
 msgid "LHelp could not be located at \"%s\"."
-msgstr "LHelp wurde unter \"%s\" nicht gefunden."
+msgstr "LHelp не найден под именем \"%s\"."
 
 #: chmstrconsts.rslhelpfailedtobuild
 msgctxt "chmstrconsts.rslhelpfailedtobuild"
 msgid "LHelp failed to build."
-msgstr "LHelp konnte nicht erzeugt werden."
+msgstr "Не удалось собрать LHelp."
 
 #: chmstrconsts.rslocallink
-#, fuzzy
-#| msgid "Local link (in chm)"
 msgctxt "chmstrconsts.rslocallink"
 msgid "Local link (in CHM)"
-msgstr "Lokaler Verweis (in CHM)"
+msgstr "Локальная ссылка (в CHM)"
 
 #: chmstrconsts.rsnew
 msgid "New project..."
-msgstr "Neues Projekt..."
+msgstr "Новый проект..."
 
 #: chmstrconsts.rsnew_hint
 msgctxt "chmstrconsts.rsnew_hint"
 msgid "New project"
-msgstr "Neues Projekt"
+msgstr "Новый проект"
 
 #: chmstrconsts.rsopen
 msgid "Open project..."
-msgstr "Projekt öffnen..."
+msgstr "Открыть проект..."
 
 #: chmstrconsts.rsopen_hint
 msgctxt "chmstrconsts.rsopen_hint"
 msgid "Open project file"
-msgstr "Projekt-Datei öffnen"
+msgstr "Открыть файл проекта"
 
 #: chmstrconsts.rsoperatingsystem
 msgctxt "chmstrconsts.rsoperatingsystem"
 msgid "Operating system:"
-msgstr "Betriebssystem:"
+msgstr "Операционная система:"
 
 #: chmstrconsts.rsprojecthasbeenmodified
 msgctxt "chmstrconsts.rsprojecthasbeenmodified"
 msgid "Project has been modified."
-msgstr "Projekt wurde verändert."
+msgstr "Проект был изменён."
 
 #: chmstrconsts.rsquit
 msgctxt "chmstrconsts.rsquit"
 msgid "Quit"
-msgstr "Beenden"
+msgstr "Выход"
 
 #: chmstrconsts.rsquit_hint
 msgctxt "chmstrconsts.rsquit_hint"
 msgid "Quit program"
-msgstr "Programm beenden"
+msgstr "Выйти из программы"
 
 #: chmstrconsts.rssave
 msgctxt "chmstrconsts.rssave"
 msgid "Save"
-msgstr "Speichern"
+msgstr "Сохранить"
 
 #: chmstrconsts.rssaveas
 msgctxt "chmstrconsts.rssaveas"
 msgid "Save as..."
-msgstr "Speichern unter..."
+msgstr "Сохранить как..."
 
 #: chmstrconsts.rssaveas_hint
 msgctxt "chmstrconsts.rssaveas_hint"
 msgid "Save project under a new name"
-msgstr "Projekt unter einem neuen Namen speichern"
+msgstr "Сохранить проект под новым именем"
 
 #: chmstrconsts.rssavechanges
 msgctxt "chmstrconsts.rssavechanges"
 msgid "Save changes?"
-msgstr "Änderungen speichern?"
+msgstr "Сохранить изменения?"
 
 #: chmstrconsts.rssave_hint
 msgctxt "chmstrconsts.rssave_hint"
 msgid "Save project"
-msgstr "Projekt speichern"
+msgstr "Сохранить проект"
 
 #: chmstrconsts.rsselectlocalfile
 msgid "You must select a local file first."
-msgstr "Zuerst eine lokale Datei auswählen."
+msgstr "Сначала требуется выбрать локальный файл."
 
 #: chmstrconsts.rssitemap
 msgid "Sitemap (Tree/List)"
-msgstr "Seitenstruktur"
+msgstr "Структура (дерево/список)"
 
 #: chmstrconsts.rssitemapeditor
 msgctxt "chmstrconsts.rssitemapeditor"
 msgid "Sitemap Editor"
-msgstr "Seitenstruktur-Editor"
+msgstr "Редактор структуры"
 
 #: chmstrconsts.rssubitem
 msgctxt "chmstrconsts.rssubitem"
 msgid "Subitem"
-msgstr "Untereintrag"
+msgstr "Подэлемент"
 
 #: chmstrconsts.rstargetcpu
 msgctxt "chmstrconsts.rstargetcpu"
 msgid "Target CPU:"
-msgstr "Ziel-CPU:"
+msgstr "Целевой процессор:"
 
 #: chmstrconsts.rstargetos
 msgctxt "chmstrconsts.rstargetos"
 msgid "Target OS:"
-msgstr "Ziel-OS:"
+msgstr "Целевая ОС:"
 
 #: chmstrconsts.rstargetplatform
 msgid "Target platform:"
-msgstr "Ziel-Plattform:"
+msgstr "Целевая платформа:"
 
 #: chmstrconsts.rsthiswilladdallfiles
 msgctxt "chmstrconsts.rsthiswilladdallfiles"
 msgid "This will add all files in the project directory recursively."
-msgstr "Das fügt alle Dateien im Projektverzeichnis rekursiv hinzu."
+msgstr "Это действие рекурсивно добавит все файлы в каталоге проекта."
 
 #: chmstrconsts.rstrytobuildusinglazbuild
-#, fuzzy
-#| msgid "Try to build using LazBuild?"
 msgctxt "chmstrconsts.rstrytobuildusinglazbuild"
 msgid "Try to build using Lazbuild?"
-msgstr "Mit LazBuild erzeugen??"
+msgstr "Попытаться собрать с помощью Lazbuild?"
 
 #: chmstrconsts.rsuntitled
 msgid "Untitled"
-msgstr "Ohne Namen"
+msgstr "Безымянный"
 
 #: chmstrconsts.rsurl
-#, fuzzy
-#| msgid "URL (http)"
 msgctxt "chmstrconsts.rsurl"
 msgid "URL (HTTP)"
-msgstr "URL (http)"
+msgstr "Адрес (HTTP)"
 
 #: chmstrconsts.rsusefoldericons
 msgid "Use folder icons"
-msgstr "Ordner-Icons verwenden"
+msgstr "Использовать значки каталога"
 
 #: chmstrconsts.rsversion
 msgctxt "chmstrconsts.rsversion"
 msgid "Version:"
-msgstr "Version:"
+msgstr "Версия:"
 
 #: tchmform.addallbtn.caption
 msgid "Add all files in project directory"
-msgstr ""
+msgstr "Добавить все файлы в каталоге проекта"
 
 #: tchmform.addfilesbtn.caption
 msgid "Add files"
-msgstr ""
+msgstr "Добавить файлы"
 
 #: tchmform.autoaddlinksbtn.caption
 msgid "Auto add HREF files"
-msgstr ""
+msgstr "Автоматически добавить файлы HREF"
 
 #: tchmform.caption
 msgid "CHM Help File Maker"
-msgstr ""
+msgstr "Компоновщик файлов справки CHM"
 
 #: tchmform.chmfilenamelabel.caption
 msgid "CHM filename"
-msgstr ""
+msgstr "Имя файла CHM"
 
 #: tchmform.chmtitlelabel.caption
 msgid "CHM Title"
-msgstr ""
+msgstr "Заголовок CHM"
 
 #: tchmform.compileitem.caption
-#, fuzzy
 msgctxt "tchmform.compileitem.caption"
 msgid "Compile"
-msgstr "Kompilieren"
+msgstr "Компиляция"
 
 #: tchmform.compiletimeoptionsgroupbox.caption
 msgid "Compile-time options:"
-msgstr ""
+msgstr "Параметры компиляции:"
 
 #: tchmform.createsearchablechmcheck.caption
 msgid "Create a searchable CHM file"
-msgstr ""
+msgstr "Создать файл CHM с возможностью поиска"
 
 #: tchmform.defaultpagelabel.caption
 msgid "Default page"
-msgstr ""
+msgstr "Страница по умолчанию"
 
 #: tchmform.filesnotelabel.caption
 msgid "All files must be in the project file directory or a subdirectory."
-msgstr ""
+msgstr "Все файлы должны быть в каталоге или подкаталоге проекта."
 
 #: tchmform.indexlabel.caption
 msgid "Index (*.hhk)"
-msgstr ""
+msgstr "Индекс (*.hhk)"
 
 #: tchmform.menuitem1.caption
 msgctxt "tchmform.menuitem1.caption"
 msgid "Project"
-msgstr ""
+msgstr "Проект"
 
 #: tchmform.menuitem3.caption
 msgctxt "tchmform.menuitem3.caption"
 msgid "Help"
-msgstr ""
+msgstr "Справка"
 
 #: tchmform.removefilesbtn.caption
 msgid "Remove selected"
-msgstr ""
+msgstr "Удалить выбранные"
 
 #: tchmform.scanhtmlcheck.caption
 msgid ""
 "Parse *.htm* files to include \n"
 "linked pages and images"
 msgstr ""
+"Анализировать файлы *.htm* для включения\n"
+"связанных страниц и изображений"
 
 #: tchmform.tableofcontentslabel.caption
 msgid "Table of Contents (*.hhc)"
-msgstr ""
+msgstr "Содержание (*.hhc)"
 
