LHalp: Enable/disable toolbar buttons depending on program state. Replace "TOC" by "Table of Contents". Issue #41664, patch by Don Siders. Add German translation.

--- a/components/chmhelp/lhelp/languages/lhelp.de.po
+++ b/components/chmhelp/lhelp/languages/lhelp.de.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: LHelp\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Péter Gábor <ptrg@freemail.hu>\n"
-"Language-Team: Magyar (Hungarian)\n"
-"Language: hu\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,105 +13,105 @@ msgstr ""
 
 #: lhelpstrconsts.slhelp_about
 msgid "About"
-msgstr "Névjegy"
+msgstr "Über"
 
 #: lhelpstrconsts.slhelp_about2
 msgid "&About ..."
-msgstr "&Névjegy ..."
+msgstr "Ü&ber ..."
 
 #: lhelpstrconsts.slhelp_actions
 msgid "&Actions"
-msgstr ""
+msgstr "&Aktionen"
 
 #: lhelpstrconsts.slhelp_actionsgoback
 msgid "Go back"
-msgstr ""
+msgstr "Zurück"
 
 #: lhelpstrconsts.slhelp_actionsgoforward
 msgid "Go forward"
-msgstr ""
+msgstr "Vorwärts"
 
 #: lhelpstrconsts.slhelp_actionsgohome
 msgid "Go home"
-msgstr ""
+msgstr "Nach Hause"
 
 #: lhelpstrconsts.slhelp_actionsindex
 msgid "Search by &index"
-msgstr ""
+msgstr "Mit &Index suchen"
 
 #: lhelpstrconsts.slhelp_actionssearch
 msgid "&Search by text"
-msgstr ""
+msgstr "Mit Text &suchen"
 
 #: lhelpstrconsts.slhelp_actionstoc
 msgid "&Table of contents"
-msgstr ""
+msgstr "Inhal&tsverzeichnis"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
 #, object-pascal-format
 msgid "Cannot handle this type of content. \"%s\" for url:%s%s"
-msgstr "Nem kezelhetők az ilyen típusú tartalmak. \"%s\" a következő url-en:%s%s"
+msgstr "Kann diesen Inhaltstyp nicht verarbeiten. \"%s\" in URL: %s%s"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofsubcontentforurl
 #, object-pascal-format
 msgid "Cannot handle this type of subcontent. \"%s\" for url:%s%s"
-msgstr "Nem kezelhetők az ilyen típusú altartalmak. \"%s\" a következő url-en:%s%s"
+msgstr "Kann diesen Unterpunkt nicht verarbeiten. \"%s\" in URL %s.%s"
 
 #: lhelpstrconsts.slhelp_close
 msgid "&Close"
-msgstr "Be&zárás"
+msgstr "S&chließen"
 
 #: lhelpstrconsts.slhelp_closeconfirm
 msgid "You can hide Help via Esc key. Do you really want to close LHelp?"
-msgstr ""
+msgstr "Das Hilfefenster kann mit ESC versteckt werden. Soll LHelp wirklich geschlossen werden?"
 
 #: lhelpstrconsts.slhelp_contents
 msgid "Contents"
-msgstr "Tartalom"
+msgstr "Inhalt"
 
 #: lhelpstrconsts.slhelp_contextshowthehelpinformationrelatedtothiscontext
 msgid "    --context  :  Show the help information related to this context"
-msgstr "    --context  :  Megjeleníti az azonosítóhoz tartozó súgót"
+msgstr "    --context  :  Hilfe-Information zu diesem Hilfepunkt anzeigen"
 
 #: lhelpstrconsts.slhelp_copy
 msgid "Copy"
-msgstr "Másolás"
+msgstr "Kopieren"
 
 #: lhelpstrconsts.slhelp_copyhtmlsource
 msgid "Copy HTML source"
-msgstr ""
+msgstr "HTML-Quellen kopieren"
 
 #: lhelpstrconsts.slhelp_exit
 msgid "E&xit"
-msgstr "Kilé&pés"
+msgstr "Beenden"
 
 #: lhelpstrconsts.slhelp_file
 msgid "&File"
-msgstr "&Fájl"
+msgstr "&Datei"
 
 #: lhelpstrconsts.slhelp_find
 msgid "Find"
-msgstr "Keresés"
+msgstr "Suchen"
 
 #: lhelpstrconsts.slhelp_help
 msgid "&Help"
-msgstr "&Súgó"
+msgstr "&Hilfe"
 
 #: lhelpstrconsts.slhelp_helpfileschmchmallfiles
 msgid "Help files (*.chm)|*.chm|All files (*.*)|*"
-msgstr "Súgó fájlok (*.chm)|*.chm|Minden fájl (*.*)|*"
+msgstr "Hilfe-Dateien (*.chm)|*.chm|Alle Dateien (*.*)|*;*.*"
 
 #: lhelpstrconsts.slhelp_helpshowthisinformation
 msgid "    --help     :  Show this information"
-msgstr "    --help     :  Megjeleníti ezt a súgót"
+msgstr "    --help     :  Diese Information anzeigen"
 
 #: lhelpstrconsts.slhelp_hide
 msgid "&Hide"
-msgstr ""
+msgstr "&Verstecken"
 
 #: lhelpstrconsts.slhelp_hidestarthiddenbutacceptcommunicationsviaipc
 msgid "    --hide     :  Start hidden but accept communications via IPC"
-msgstr "    --hide     :  Rejtve indul, de fogadja az IPC kéréseket"
+msgstr "    --hide     :  Versteckt starten, aber Kommunikation via IPC akzeptieren"
 
 #: lhelpstrconsts.slhelp_index
 msgid "Index"
@@ -119,16 +119,16 @@ msgstr "Index"
 
 #: lhelpstrconsts.slhelp_indexloading
 msgid "Index Loading ..."
-msgstr "Index betöltése ..."
+msgstr "Index laden ..."
 
 #: lhelpstrconsts.slhelp_ipcnamethenameoftheipcservertolistenonforprogramsw
 #, object-pascal-format
 msgid "    --ipcname  :  The name of the IPC server to listen on for%s              programs who wish to control the viewer"
-msgstr "    --ipcname  :  Az IPC kiszolgáló neve, amely a megjelenítőt%s              vezérelni szándékozó programok kéréseit várja"
+msgstr "    --ipcname  :  Name des IPC-Servers, um %s Programme zu verfolgen, die den Viewer steuern möchten"
 
 #: lhelpstrconsts.slhelp_keyword
 msgid "Keyword:"
-msgstr "Kulcsszó:"
+msgstr "Schlüsselwort:"
 
 #: lhelpstrconsts.slhelp_lhelp
 msgid "LHelp"
@@ -142,30 +142,30 @@ msgstr "LHelp - %s"
 #: lhelpstrconsts.slhelp_lhelpchmfileviewerversioncopyrightcandrewhaineslaz
 #, object-pascal-format
 msgid "CHM file viewer%sVersion %s%sCopyright (C) Andrew Haines, %sLazarus contributors"
-msgstr "CHM megjelenítő%sVáltozat: %s%sCopyright (C) Andrew Haines, %sLazarus közreműködők"
+msgstr "CHM file viewer%sVersion %s%sCopyright (C) Andrew Haines, %sLazarus contributors"
 
 #: lhelpstrconsts.slhelp_lhelpoptions
 msgid "  LHelp options:"
-msgstr "  LHelp kapcsolók:"
+msgstr "  LHelp-Optionen:"
 
 #: lhelpstrconsts.slhelp_loadedinms
 #, object-pascal-format
 msgid "Loaded: %s in %sms"
-msgstr "Betöltve: %s (%s ms)"
+msgstr "Geladen: %s in %sms"
 
 #: lhelpstrconsts.slhelp_loading
 #, object-pascal-format
 msgid "Loading: %s"
-msgstr "Betöltés: %s"
+msgstr "Laden: %s"
 
 #: lhelpstrconsts.slhelp_noresults
 msgid "No Results"
-msgstr "Nincs találat"
+msgstr "Keine Ergebnisse"
 
 #: lhelpstrconsts.slhelp_notfound
 #, object-pascal-format
 msgid "%s not found!"
-msgstr "A(z) %s nem található!"
+msgstr "%s nicht gefunden!"
 
 #: lhelpstrconsts.slhelp_ok
 msgid "OK"
@@ -173,69 +173,69 @@ msgstr "OK"
 
 #: lhelpstrconsts.slhelp_open
 msgid "&Open ..."
-msgstr "&Megnyitás ..."
+msgstr "Ö&ffnen ..."
 
 #: lhelpstrconsts.slhelp_openexistingfile
 msgid "Open existing file"
-msgstr "Létező fájl megnyitása"
+msgstr "Existierende Datei öffnen"
 
 #: lhelpstrconsts.slhelp_opennewfileinseparatetab
 msgid "Open new file in separate tab"
-msgstr "Új fájl megnyitása másik fülön"
+msgstr "Neue Datei in eigenem Tab öffnen"
 
 #: lhelpstrconsts.slhelp_opennewtabwithstatusbar
 msgid "Open new tab with status bar"
-msgstr "Új fül nyitása állapotsorral"
+msgstr "Neuen Tab über die Statuszeile öffnen"
 
 #: lhelpstrconsts.slhelp_openrecent
 msgid "Open Recent"
-msgstr "Legutóbbi megynyitása"
+msgstr "Erneut öffnen"
 
 #: lhelpstrconsts.slhelp_openurl
 msgid "Open &URL ..."
-msgstr "&URL megnyitása ..."
+msgstr "&URL öffnen ..."
 
 #: lhelpstrconsts.slhelp_pagecannotbefound
 msgid "Page cannot be found!"
-msgstr "Az oldal nem tölthető be!"
+msgstr "Seite kann nicht gefunden werden!"
 
 #: lhelpstrconsts.slhelp_pleaseenteraurl
 msgid "Please enter a URL"
-msgstr "Adjon meg egy URL-t"
+msgstr "URL eingeben"
 
 #: lhelpstrconsts.slhelp_search
 msgid "Search"
-msgstr "Keresés"
+msgstr "Suchen"
 
 #: lhelpstrconsts.slhelp_searchresults
 msgid "Search Results:"
-msgstr "Keresési eredmények:"
+msgstr "Suchergebnisse:"
 
 #: lhelpstrconsts.slhelp_showcontents
 msgid "Show contents"
-msgstr "Tartalom megjelenítése"
+msgstr "Inhalt anzeigen"
 
 #: lhelpstrconsts.slhelp_supportedurltypes
 #, object-pascal-format
 msgid "Supported URL type(s): [ %s ]"
-msgstr "Támogatott URL típus(ok): [ %s ]"
+msgstr "Unterstützte URL-Typen: [ %s ]"
 
 #: lhelpstrconsts.slhelp_tableofcontentsloading
 msgid "Table of Contents Loading ..."
-msgstr "Tartalomjegyzék betöltése ..."
+msgstr "Laden des Inhaltsverzeichnisses ..."
 
 #: lhelpstrconsts.slhelp_tableofcontentsloadingpleasewait
 msgid "Table of Contents Loading. Please Wait ..."
-msgstr "Tartalomjegyzék betöltése. Kis türelmet ..."
+msgstr "Inhaltsverzeichnis laden. Bitte warten ..."
 
 #: lhelpstrconsts.slhelp_untitled
 msgid "untitled"
-msgstr "névtelen"
+msgstr "Ohne Titel"
 
 #: lhelpstrconsts.slhelp_usagelhelpfilenamecontextidhideipcnamelhelpmyapp
 msgid "    Usage: lhelp [[filename] [--context id] [--hide] [--ipcname lhelp-myapp]]"
-msgstr "    Használat: lhelp [[fájlnév] [--context azonosító] [--hide] [--ipcname lhelp-alkalmazásom]]"
+msgstr "    Aufruf: lhelp [[filename] [--context id] [--hide] [--ipcname lhelp-myapp]]"
 
 #: lhelpstrconsts.slhelp_view
 msgid "&View"
-msgstr "&Nézet"
+msgstr "&Ansicht"
