--- a/components/chmhelp/lhelp/languages/lhelp.fi.po
+++ b/components/chmhelp/lhelp/languages/lhelp.fi.po
@@ -44,7 +44,7 @@ msgid "&Search by text"
 msgstr ""
 
 #: lhelpstrconsts.slhelp_actionstoc
-msgid "&TOC"
+msgid "&Table of contents"
 msgstr ""
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
