--- a/components/chmhelp/lhelp/languages/lhelp.fr.po
+++ b/components/chmhelp/lhelp/languages/lhelp.fr.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2015-04-12 15:04+0100\n"
-"PO-Revision-Date: 2024-10-19 09:46+0200\n"
+"PO-Revision-Date: 2025-05-23 00:24+0200\n"
 "Last-Translator: Yann Mérignac <yann.merignac@laposte.net>\n"
 "Language-Team: Vasseur Gilles <gillesvasseur58@gmail.com>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.5\n"
+"X-Generator: Poedit 3.6\n"
 
 #: lhelpstrconsts.slhelp_about
 msgid "About"
@@ -44,7 +44,7 @@ msgid "&Search by text"
 msgstr "&Rechercher par texte"
 
 #: lhelpstrconsts.slhelp_actionstoc
-msgid "&TOC"
+msgid "&Table of contents"
 msgstr "&Table des matières"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
@@ -239,4 +239,3 @@ msgstr "    Utilisation : lhelp [[filename] [--context id] [--hide] [--ipcname l
 #: lhelpstrconsts.slhelp_view
 msgid "&View"
 msgstr "&Afficher"
-
