--- a/components/chmhelp/lhelp/languages/lhelp.lt.po
+++ b/components/chmhelp/lhelp/languages/lhelp.lt.po
@@ -1,17 +1,17 @@
 # Valdas Jankunas <zmuogs@gmail.com>, 2017.
 msgid ""
 msgstr ""
-"Last-Translator: Valdas Jankunas <zmuogs@gmail.com>\n"
-"PO-Revision-Date: 2021-02-14 18:17+0100\n"
 "Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2025-05-23 00:25+0200\n"
+"Last-Translator: Valdas Jankunas <zmuogs@gmail.com>\n"
 "Language-Team: Lithuanian <kde-i18n-lt@kde.org>\n"
 "Language: lt\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"MIME-Version: 1.0\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.4.2\n"
-"POT-Creation-Date: \n"
+"X-Generator: Poedit 3.6\n"
 
 #: lhelpstrconsts.slhelp_about
 msgid "About"
@@ -46,7 +46,7 @@ msgid "&Search by text"
 msgstr ""
 
 #: lhelpstrconsts.slhelp_actionstoc
-msgid "&TOC"
+msgid "&Table of contents"
 msgstr ""
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
@@ -170,8 +170,6 @@ msgid "%s not found!"
 msgstr "„%s“ nerasta!"
 
 #: lhelpstrconsts.slhelp_ok
-#, fuzzy
-#| msgid "Ok"
 msgid "OK"
 msgstr "Tvarka"
 
@@ -243,4 +241,3 @@ msgstr "    Naudojimas: lhelp [[failo_pavadinimas] [--context id] [--hide] [--ip
 #: lhelpstrconsts.slhelp_view
 msgid "&View"
 msgstr "&Rodymas"
-
