--- a/components/chmhelp/lhelp/languages/lhelp.pt_BR.po
+++ b/components/chmhelp/lhelp/languages/lhelp.pt_BR.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Marcelo B Paula\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: pt_BR\n"
-"X-Generator: Poedit 1.8.13\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.6\n"
 
 #: lhelpstrconsts.slhelp_about
 msgid "About"
@@ -44,8 +44,9 @@ msgid "&Search by text"
 msgstr "&Localizar pelo texto"
 
 #: lhelpstrconsts.slhelp_actionstoc
-msgid "&TOC"
-msgstr "&TOC"
+#| msgid "&TOC"
+msgid "&Table of contents"
+msgstr "&Table of contents"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
 #, object-pascal-format
@@ -239,4 +240,3 @@ msgstr "    Uso: lhelp [[arquivo] [--context id] [--hide] [--ipcname lhelp-meuap
 #: lhelpstrconsts.slhelp_view
 msgid "&View"
 msgstr "&Exibir"
-
