--- a/components/chmhelp/lhelp/languages/lhelp.ru.po
+++ b/components/chmhelp/lhelp/languages/lhelp.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"X-Generator: Poedit 2.2.1\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.6\n"
 
 #: lhelpstrconsts.slhelp_about
 msgid "About"
@@ -44,7 +44,7 @@ msgid "&Search by text"
 msgstr "Найти &текст"
 
 #: lhelpstrconsts.slhelp_actionstoc
-msgid "&TOC"
+msgid "&Table of contents"
 msgstr "Содер&жание"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
@@ -240,4 +240,3 @@ msgstr "    Использование: lhelp [[имя файла] [--context id
 #: lhelpstrconsts.slhelp_view
 msgid "&View"
 msgstr "&Вид"
-
