--- a/components/chmhelp/lhelp/languages/lhelp.uk.po
+++ b/components/chmhelp/lhelp/languages/lhelp.uk.po
@@ -2,16 +2,17 @@
 # lxlalexlxl <lxlalexlxl@ukr.net>, 2021.
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
-"Last-Translator: lxlalexlxl <lxlalexlxl@ukr.net>\n"
-"PO-Revision-Date: 2021-06-08 00:56+0300\n"
 "Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2025-05-23 00:26+0200\n"
+"Last-Translator: lxlalexlxl <lxlalexlxl@ukr.net>\n"
 "Language-Team: Ukrainian <kde-i18n-doc@kde.org>\n"
 "Language: uk\n"
-"Content-Transfer-Encoding: 8bit\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Lokalize 19.12.3\n"
+"X-Generator: Poedit 3.6\n"
 
 #: lhelpstrconsts.slhelp_about
 msgid "About"
@@ -46,7 +47,7 @@ msgid "&Search by text"
 msgstr "Пошук за &текстом"
 
 #: lhelpstrconsts.slhelp_actionstoc
-msgid "&TOC"
+msgid "&Table of contents"
 msgstr "&Зміст"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
@@ -241,4 +242,3 @@ msgstr "    Використання: lhelp [[назва файлу] [--context 
 #: lhelpstrconsts.slhelp_view
 msgid "&View"
 msgstr "&Вигляд"
-
