--- a/tools/chmmaker/languages/chmmaker.zh_CN.po
+++ b/tools/chmmaker/languages/chmmaker.zh_CN.po
@@ -53,6 +53,12 @@ msgstr "正在构建 LHelp ..."
 msgid "Cancel"
 msgstr "取消"
 
+#: chmstrconsts.rschmmakercaption
+#, fuzzy
+msgctxt "chmstrconsts.rschmmakercaption"
+msgid "CHM Help File Maker"
+msgstr "CHM 帮助文件制作器"
+
 #: chmstrconsts.rsclose
 msgctxt "chmstrconsts.rsclose"
 msgid "Close"
@@ -160,8 +166,18 @@ msgid "Global properties"
 msgstr "全局属性"
 
 #: chmstrconsts.rshelpfileprojecthfp
-msgid "Help File Project (*.hfp)"
+#, fuzzy
+#| msgid "Help File Project (*.hfp)"
+msgid "Help File Project"
 msgstr "帮助文件项目 (*.hfp)"
+
+#: chmstrconsts.rshelpprojectfiles
+msgid "Help Project Files"
+msgstr ""
+
+#: chmstrconsts.rshelpworkshopprojecthhp
+msgid "Help Workshop Project"
+msgstr ""
 
 #: chmstrconsts.rsindexfiles
 msgid "Index files (*.hhk)"
@@ -196,6 +212,10 @@ msgstr "新建项目 ..."
 msgctxt "chmstrconsts.rsnew_hint"
 msgid "New project"
 msgstr "新建项目"
+
+#: chmstrconsts.rsnoname
+msgid "[no name]"
+msgstr ""
 
 #: chmstrconsts.rsopen
 msgid "Open project..."
@@ -332,6 +352,7 @@ msgid "Auto add HREF files"
 msgstr "自动添加 HREF 文件"
 
 #: tchmform.caption
+msgctxt "tchmform.caption"
 msgid "CHM Help File Maker"
 msgstr "CHM 帮助文件制作器"
 
