--- a/tools/chmmaker/languages/chmmaker.ru.po
+++ b/tools/chmmaker/languages/chmmaker.ru.po
@@ -175,15 +175,15 @@ msgstr "Глобальные свойства"
 #: chmstrconsts.rshelpfileprojecthfp
 #, fuzzy
 #| msgid "Help File Project (*.hfp)"
-msgid "Help File Project"
+msgid "Help File Project (*.hfp)"
 msgstr "Проект файла справки (*.hfp)"
 
 #: chmstrconsts.rshelpprojectfiles
-msgid "Help Project Files"
+msgid "Help Project Files (*.hfp;*.hhp)"
 msgstr ""
 
 #: chmstrconsts.rshelpworkshopprojecthhp
-msgid "Help Workshop Project"
+msgid "Help Workshop Project (*.hhp)"
 msgstr ""
 
 #: chmstrconsts.rsindexfiles
