--- a/tools/chmmaker/languages/chmmaker.de.po
+++ b/tools/chmmaker/languages/chmmaker.de.po
@@ -172,15 +172,15 @@ msgid "Global properties"
 msgstr "Globale Eigenschaften"
 
 #: chmstrconsts.rshelpfileprojecthfp
-msgid "Help File Project"
+msgid "Help File Project (*.hfp)"
 msgstr ""
 
 #: chmstrconsts.rshelpprojectfiles
-msgid "Help Project Files"
+msgid "Help Project Files (*.hfp;*.hhp)"
 msgstr ""
 
 #: chmstrconsts.rshelpworkshopprojecthhp
-msgid "Help Workshop Project"
+msgid "Help Workshop Project (*.hhp)"
 msgstr ""
 
 #: chmstrconsts.rsindexfiles
